--- a/resources/spring.yaml
+++ b/resources/spring.yaml
@@ -15,25 +15,21 @@ spec:
       terminal:
         enabled: true
         layout: split
+      console:
+        enabled: true
+        vendor: octant
       editor:
+        enabled: true
+      examiner:
+        enabled: true
+      docker:
         enabled: true
       registry:
         enabled: true
     dashboards:
     - name: Docs
       url: https://tanzu.vmware.com
-    objects:
-    - apiVersion: v1
-      kind: Pod
-      metadata:
-        labels:
-          run: nginx
-        name: nginx
-      spec:
-        containers:
-        - image: nginx
-          name: nginx
-        restartPolicy: Never
+    # objects:
     # - apiVersion: training.eduk8s.io/v1alpha2
     #   kind: Workshop
     #   metadata:
